CVPR2023 by. XPixelGroup
HAT: Hybrid Attention Transformer for Image Restoration

Activating More Pixels in Image Super-Resolution Transformer Arxiv

https://github.com/XPixelGroup/HAT

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ torch>=2.0.0
 torchvision
 tqdm
 yapf
-timm   # For dat_arch.py
-einops # For dat_arch.py
+timm   # For dat_arch
+einops # For dat_arch & hat_arch
