ICCV 2023 by. zhengchen1999
PyTorch code for our ICCV 2023 paper "Dual Aggregation Transformer for Image Super-Resolution"

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # ignored folders
 datasets/*
 experiments/*
@@ -5,6 +7,8 @@ results/*
 tb_logger/*
 wandb/*
 tmp/*
+visual/*
+.vs
 
 docs/api
 scripts/__init__.py
