ATD CVPR2024 by. LehengZhang

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ timm       # For dat_arch & PLKSR
 einops     # For dat_arch & hat_arch & PLKSR
 fvcore     # For PLKSR
 matplotlib # For PLKSR
+fairscale  # For ATD
