Arxiv 2024 by. dslisleedh
PLKSR: Partial Large Kernel CNNs for Efficient Super-Resolution

https://github.com/dslisleedh/PLKSR

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,7 @@ torch>=2.0.0
 torchvision
 tqdm
 yapf
-timm   # For dat_arch
-einops # For dat_arch & hat_arch
+timm       # For dat_arch & PLKSR
+einops     # For dat_arch & hat_arch & PLKSR
+fvcore     # For PLKSR
+matplotlib # For PLKSR
